deprecated constructor calls replaced with valueOf